--- a/src/ui/ui.css
+++ b/src/ui/ui.css
@@ -24,7 +24,8 @@ body {
 .header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  justify-content: right;
   padding: 12px 12px;
   border-bottom: 1px solid #444444;
   background: #2c2c2c;
@@ -264,6 +265,28 @@ body {
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+.save-button {
+  padding: 6px 0px;
+  /* border: 1px solid #383838; */
+  border: 0px;
+  background-color: #2c2c2c;
+  /* color: #383838; */
+  color: #ffffff;
+  /* color: #888888; */
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* transition: background-color 0.2s; */
+  flex-shrink: 0;
+  width: 36px;
+  height: 36px;
+}
+
+.save-button:hover {
+  background-color: #383838;
 }
 
 .consent-button {
