--- a/src/ui/ui.css
+++ b/src/ui/ui.css
@@ -26,7 +26,7 @@ body {
   align-items: center;
   /* justify-content: space-between; */
   justify-content: right;
-  padding: 12px 12px;
+  padding: 8px 12px;
   border-bottom: 1px solid #444444;
   background: #2c2c2c;
   font-size: 11px;
@@ -39,20 +39,70 @@ body {
   gap: 8px;
 }
 
+.more-dropdown-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .icon-button {
   padding: 6px;
-  border: 1px solid #383838;
+  /* border: 1px solid #383838; */
+  border: 0px;
   background-color: #2c2c2c;
   color: #ffffff;
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 28px;
-  height: 28px;
+  width: 36px;
+  height: 36px;
 }
 
 .icon-button:hover {
+  background-color: #383838;
+}
+
+.save-button {
+  padding: 6px 0px;
+  /* border: 1px solid #383838; */
+  border: 0px;
+  background-color: #2c2c2c;
+  /* color: #383838; */
+  color: #ffffff;
+  /* color: #888888; */
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* transition: background-color 0.2s; */
+  flex-shrink: 0;
+  width: 36px;
+  height: 36px;
+}
+
+.save-button:hover {
+  background-color: #383838;
+}
+
+.clear-button {
+  padding: 6px 0px;
+  /* border: 1px solid #383838; */
+  border: 0px;
+  background-color: #2c2c2c;
+  /* color: #383838; */
+  color: #ffffff;
+  /* color: #888888; */
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* transition: background-color 0.2s; */
+  width: 36px;
+  height: 36px;
+}
+
+.clear-button:hover {
   background-color: #383838;
 }
 
@@ -265,28 +315,6 @@ body {
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
-}
-
-.save-button {
-  padding: 6px 0px;
-  /* border: 1px solid #383838; */
-  border: 0px;
-  background-color: #2c2c2c;
-  /* color: #383838; */
-  color: #ffffff;
-  /* color: #888888; */
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* transition: background-color 0.2s; */
-  flex-shrink: 0;
-  width: 36px;
-  height: 36px;
-}
-
-.save-button:hover {
-  background-color: #383838;
 }
 
 .consent-button {
